# BackGammonAI

./: .gitignore  README.md
gtests/: BoardTest  BoardTest.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
logic/: Board.c++  Board.h  TODO  time_test.cpp
